redactable/tests/ui/sensitive_display_nonzero_secret_rejected_slog.stderr
error[E0599]: the method `redactable_policy_formatting` exists for struct `redactable::__private::PolicyFormattingProbe<'_, NonZero<u32>>`, but its trait bounds were not satisfied
 --> tests/ui/sensitive_display_nonzero_secret_rejected_slog.rs:8:5
  |
8 |     #[sensitive(redactable::Secret)]
  |     ^ method cannot be called due to unsatisfied trait bounds
  |
 ::: src/__private/formatting.rs
  |
  | pub struct PolicyFormattingProbe<'a, T: ?Sized> {
  | ----------------------------------------------- doesn't satisfy `_: PolicyFormattingDispatch`
  |
  = note: the following trait bounds were not satisfied:
          `NonZero<u32>: redactable::__private::PolicyApplicableRefForGeneratedFormatting`
          which is required by `redactable::__private::PolicyFormattingProbe<'_, NonZero<u32>>: redactable::__private::PolicyFormattingDispatch`
          `NonZero<u32>: redactable::__private::PolicyApplicableRefForFormatting`
          which is required by `&redactable::__private::PolicyFormattingProbe<'_, NonZero<u32>>: redactable::__private::PolicyFormattingDispatch`
